--- a/style.css
+++ b/style.css
@@ -47,15 +47,15 @@ body {
   background-color: rgba(0, 0, 0, 0.95);
 }
 
-#marketing {
-  background-image: url(https://images.unsplash.com/photo-1522205987242-8e22924ab42a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c0f679eb8f15705d46ea90008f39642b&auto=format&fit=crop&w=500&q=60);
+#CodeTemplates {
+  background-image: url(https://img.freepik.com/free-vector/laptop-with-program-code-isometric-icon-software-development-programming-applications-dark-neon_39422-971.jpg);
 }
 
 
-#technology {
-  background-image: url(https://images.unsplash.com/photo-1530893609608-32a9af3aa95c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fe6b92f88f55824e64a1bae15f5bf52a&auto=format&fit=crop&w=500&q=60);
+#Documentation {
+  background-image: url(https://cdn.mos.cms.futurecdn.net/bWhJKGqHQzGG5f3NXYmubk.jpg);
 }
 
-#advertising {
-  background-image: url(https://images.unsplash.com/photo-1517799094725-e3453440724e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=353f3663a9fae75773d2942aeb37c2c8&auto=format&fit=crop&w=500&q=60);
+#Community {
+  background-image: url(https://community.geant.org/wp-content/uploads/2021/11/programme-bgr-2x.png);
 }
